--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,17 @@ AGENTS.md
 /demo/dist
 /es
 /lib
-/node_modules
+node_modules
 /umd
 /.idea
 npm-debug.log*
 .DS_Store
 yarn-error.log
 .envrc
+
+# Turborepo
+.turbo
+
+# Build outputs
+apps/*/dist
+packages/*/lib
