--- a/package.json
+++ b/package.json
@@ -1,84 +1,21 @@
 {
-  "name": "@cp949/console-feed",
-  "version": "3.6.1",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "description": "A React component that displays console logs from the current page, an iframe or transported across a server",
+  "name": "console-feed-monorepo",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "prepack": "pnpm build",
-    "build": "tsc -p ./tsconfig.build.json --declaration && for file in src/**/*.d.ts; do dest=\"lib/${file#src/}\"; mkdir -p \"$(dirname \"$dest\")\"; cp \"$file\" \"$dest\"; done",
-    "start": "vite demo",
-    "release": "pnpm test && pnpm build && pnpm publish",
-    "test": "vitest run --reporter=verbose",
-    "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest",
-    "test:ui": "vitest --ui"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.12.1",
-    "@emotion/styled": "^11.11.2",
-    "isomorphic-dompurify": "^2.32.0",
-    "linkify-html": "^4.3.2",
-    "linkify-react": "^4.3.2",
-    "linkifyjs": "^4.3.2",
-    "react-inline-center": "1.0.1",
-    "react-inspector": "^9.0.0"
+    "build": "turbo run build",
+    "test": "turbo run test",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "publish": "pnpm --filter @cp949/console-feed publish"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@types/react": "^18.2.8",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^5.1.1",
-    "@vitest/ui": "^4.0.10",
-    "immutability-helper": "^3.1.1",
-    "lodash": "^4.17.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "typescript": "^5.9.3",
-    "vite": "^7.2.2",
-    "vitest": "^4.0.10"
-  },
-  "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0"
+    "turbo": "^2.6.1"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=20",
+    "pnpm": ">=9"
   },
-  "publishConfig": {
-    "access": "public"
-  },
-  "files": [
-    "es",
-    "lib",
-    "umd"
-  ],
-  "keywords": [
-    "devtools",
-    "inspector",
-    "object",
-    "object-inspector",
-    "react",
-    "react-component",
-    "reactjs",
-    "table",
-    "table-inspector",
-    "table-view",
-    "tableview",
-    "tree",
-    "tree-view",
-    "treeview",
-    "ui",
-    "view"
-  ],
-  "homepage": "https://github.com/cp949/console-feed.git",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/cp949/console-feed.git"
-  },
-  "bugs": {
-    "url": "https://github.com/cp949/console-feed/issues"
-  },
-  "author": "jjfive",
-  "license": "MIT"
+  "packageManager": "pnpm@10.22.0"
 }
