--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "clean": "turbo run clean && rm -rf node_modules",
-    "publish": "pnpm --filter @cp949/console-feed publish"
+    "publish": "cd packages/console-feed && pnpm publish"
   },
   "devDependencies": {
     "turbo": "^2.6.1"
