feat: 데모 앱 전면 개선 및 README 문서 정비
- 데모 앱을 여러 예제로 구성된 네비게이션 시스템으로 재구성
- CSS Modules 및 다크/라이트 테마 지원 추가
- 필터링, 네트워크 전송, 고급 메서드, 에러 스택 트레이스, 성능 모니터링 예제 추가
- 최상위 README를 monorepo 구조에 맞게 재구성
- packages/console-feed README의 모호한 표현 정리 및 API 문서 정확성 향상
- 영문 README를 한국어 버전과 동기화
- 코드 품질 개선 (ESLint 9, Prettier)

--- a/package.json
+++ b/package.json
@@ -7,15 +7,29 @@
     "test": "turbo run test",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "clean": "./clean.sh",
-    "publish": "cd packages/console-feed && pnpm publish"
+    "publish": "cd packages/console-feed && pnpm publish",
+    "test:compat": "bash packages/console-feed/scripts/test-react-compat.sh both",
+    "test:react18": "bash packages/console-feed/scripts/test-react-compat.sh 18",
+    "test:react19": "bash packages/console-feed/scripts/test-react-compat.sh 19"
   },
   "devDependencies": {
-    "turbo": "^2.6.1"
+    "@eslint/js": "^9.39.1",
+    "@typescript-eslint/eslint-plugin": "^8.48.1",
+    "@typescript-eslint/parser": "^8.48.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^16.5.0",
+    "prettier": "^3.7.4",
+    "turbo": "^2.6.3"
   },
   "engines": {
     "node": ">=20",
     "pnpm": ">=9"
   },
-  "packageManager": "pnpm@10.22.0"
+  "packageManager": "pnpm@10.24.0"
 }
